--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
        <section class="section-experiences" id="destinations">
 
         <div class="section-experiences__heading u-heading-secondary  u-center-text u-margin-bottom-large">
-            <h2 class="heading-secondary--text experiences-heading u-uppercase">
+            <h2 class="heading-secondary--text experiences-heading">
                 Our most popular experiences
             </h2>
         </div>
@@ -153,7 +153,7 @@
             <div class="card">
                 <div class="card__side card__side--front card__side--front-1">
 
-                        <h3 class="card__heading u-uppercase">
+                        <h3 class="card__heading">
                         <span class="card__heading-span card__heading-span--1">Australia</span>
                         </h3>
 
@@ -174,7 +174,7 @@
              <div class="card">
                 <div class="card__side card__side--front card__side--front-2">
 
-                        <h3 class="card__heading u-uppercase">
+                        <h3 class="card__heading">
                         <span class="card__heading-span card__heading-span--2">Thailand</span>
                         </h3>
 
@@ -196,7 +196,7 @@
          <div class="card">
             <div class="card__side card__side--front card__side--front-3">
 
-                    <h3 class="card__heading u-uppercase">
+                    <h3 class="card__heading">
                     <span class="card__heading-span card__heading-span--3">Bali</span>
                     </h3>
 
@@ -217,7 +217,7 @@
          <div class="card">
             <div class="card__side card__side--front card__side--front-4">
 
-                    <h3 class="card__heading u-uppercase">
+                    <h3 class="card__heading">
                     <span class="card__heading-span card__heading-span--4">South Africa</span>
                     </h3>
 
@@ -239,7 +239,7 @@
        <!-- ABOUT SECTION -->
        <section class="section-about" id="about">
            <div class="section-about__heading u-margin-bottom-large u-center-text u-heading-secondary about__heading">
-               <h2 class="heading-secondary--text u-uppercase">
+               <h2 class="heading-secondary--text">
                    Why choose Gap360?
                </h2>
            </div>
@@ -247,7 +247,7 @@
                <!-- SEC 1 -->
                <div class="about-card about-card--1">
                    <img class="about-card__img"src="./icons/Insurance.svg" alt="">
-                   <h4 class="about-card__heading u-uppercase">
+                   <h4 class="about-card__heading">
                        Insurance
                    </h4>
                    <p class="about-card__text">
@@ -258,7 +258,7 @@
                <div class="about-card about-card--2">
               
                 <img class="about-card__img"src="./icons/Expert.svg" alt="">
-                <h4 class="about-card__heading u-uppercase">
+                <h4 class="about-card__heading">
                     Expert Advisors
                 </h4>
                 <p class="about-card__text">
@@ -268,7 +268,7 @@
             <!-- SEC 3 -->
             <div class="about-card about-card--3">
                 <img class="about-card__img"src="./icons/Flights.svg" alt="">
-                <h4 class="about-card__heading u-uppercase">
+                <h4 class="about-card__heading">
                     Flights
                 </h4>
                 <p class="about-card__text">
@@ -278,7 +278,7 @@
             <!-- SEC 4 -->
             <div class="about-card about-card--4">
                 <img class="about-card__img"src="./icons/End-to-end.svg" alt="">
-                <h4 class="about-card__heading u-uppercase">
+                <h4 class="about-card__heading">
                     End to End Support
                 </h4>
                 <p class="about-card__text">
